--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-ES">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla JS SPA</title>
     <link rel="stylesheet" href="app/assets/style.css" />
+
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Vanilla JS SPA</title>
+    <meta name="description" content="spa-vanilla con javaScript." />
+
+    <meta name="theme-color" content="#F0DB4F" />
+    <meta name="MobileOptimized" content="width" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
     <link
       rel="shortcut icon"
-      href="app/assets/favicon.ico"
+      href="app/assets/javascript.png"
       type="image/x-icon"
     />
+
+    <link rel="apple-touch-icon" href="./app/assets/javascript.png" />
+    <link rel="apple-touch-startup-image" href="./app/assets/javascript.png" />
+    <link rel="manifest" href="./manifest.json" />
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="app/index.js"></script>
-    
   </body>
 </html>
