--- a/index.html
+++ b/index.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html lang="es-ES">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="app/assets/style.css" />
+  <link rel="manifest" href="manifest.json" />
 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Vanilla JS SPA</title>
-    <meta name="description" content="spa-vanilla con javaScript." />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="application-name" content="SPA VANILLA" />
+  <meta name="apple-mobile-web-app-title" content="SPA VANILLA" />
+  <meta name="theme-color" content="#007bff" />
+  <meta name="msapplication-navbutton-color" content="#007bff" />
+  <meta
+    name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent"
+  />
+  <link rel="stylesheet" href="/app/assets/style.css" />
+  <meta name="msapplication-starturl" content="/" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
 
-    <meta name="theme-color" content="#F0DB4F" />
-    <meta name="MobileOptimized" content="width" />
-    <meta name="HandheldFriendly" content="true" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="72x72"
+    href="./app/assets/android/android-launchericon-72-72.png"
+  />
 
-    <link
-      rel="shortcut icon"
-      href="app/assets/javascript.png"
-      type="image/x-icon"
-    />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="96x96"
+    href="./app/assets/android/android-launchericon-96-96.png"
+  />
 
-    <link rel="apple-touch-icon" href="./app/assets/javascript.png" />
-    <link rel="apple-touch-startup-image" href="./app/assets/javascript.png" />
-    <link rel="manifest" href="./manifest.json" />
-  </head>
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="192x96"
+    href="./app/assets/android/android-launchericon-192-192.png"
+  />
+
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="512x512"
+    href="./app/assets/android/android-launchericon-512-512.png"
+  />
+
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="144x144"
+    href="./app/assets/android/android-launchericon-144-144.png"
+  />
+
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="48x48"
+    href="./app/assets/android/android-launchericon-48-48.png"
+  />
 
   <body>
     <div id="root"></div>
