--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es-ES">
   <head>
     <link rel="manifest" href="manifest.json" />
-    
+    <title>SPA-VANILLA</title>
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="application-name" content="SPA VANILLA" />
