--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
     <link rel="icon" type="image/png" sizes="144x144" href="./app/assets/android/android-launchericon-144-144.png" />
     
     <link rel="icon" type="image/png" sizes="48x48" href="./app/assets/android/android-launchericon-48-48.png" />
+
+    <link rel="icon" type="image/png" sizes="16x16" href="./app/assets/ios/16.png" />
+    <link rel="icon" type="image/png" sizes="20x20" href="./app/assets/ios/20.png" />
+    <link rel="icon" type="image/png" sizes="29x29" href="./app/assets/ios/29.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./app/assets/ios/32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./app/assets/ios/192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="./app/assets/ios/512.png" />
+
+
+
+
+
+
     <style id="dynamic-styles"></style>
 
   </head>
